--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                 <label class="control-label"></label>
                 <input type="text" class="form-control" disabled placeholder="比賽尚未開始">
               </div>
-              <button type="submit" class="btn btn-default" disabled="disabled">送出</button>
+              <button type="submit" class="btn btn-default" disabled>送出</button>
             </div>
             <div id="scoringEnabled">
               <div class="form-group">
@@ -134,6 +134,127 @@
               <div id="teamMatchB" class="tab-pane">
               </div>
             </div>
+          </div>
+        </div>
+      </div>
+      <div id="scoringPage">
+        <br>
+        <div class="row">
+          <div class="col-xs-12 text-center">
+            <button type="button" class="btn btn-default btn-lg" id="btnBackToMainPage3"><i class="fa fa-arrow-left" aria-hidden="true"></i> 回上一頁</button>
+          </div>
+        </div>
+        <br>
+        <div class="row">
+          <div class="col-xs-12"> 
+            <table class="table table-condensed">
+              <thead>
+                <tr>
+                  <th colspan="6">1A OO大學 XXX</th>
+                  <th>總分</th>
+                </tr>
+              </thead>
+              <tbody>
+                <tr>
+                  <td><input type="text" class="form-control" size="1" maxlength="1" readonly="true"></td>
+                  <td><input type="text" class="form-control" size="1" maxlength="1" readonly="true"></td>
+                  <td><input type="text" class="form-control" size="1" maxlength="1" readonly="true"></td>
+                  <td><input type="text" class="form-control" size="1" maxlength="1" readonly="true"></td>
+                  <td><input type="text" class="form-control" size="1" maxlength="1" readonly="true"></td>
+                  <td><input type="text" class="form-control" size="1" maxlength="1" readonly="true"></td>
+                  <td></td>
+                </tr>
+              </tbody>
+            </table>
+          </div>
+          <div class="col-xs-12"> 
+            <table class="table table-condensed">
+              <thead>
+                <tr>
+                  <th colspan="6">1B OO大學 XXX</th>
+                  <th>總分</th>
+                </tr>
+              </thead>
+              <tbody>
+                <tr>
+                  <td><input type="text" class="form-control" size="1" maxlength="1" readonly="true"></td>
+                  <td><input type="text" class="form-control" size="1" maxlength="1" readonly="true"></td>
+                  <td><input type="text" class="form-control" size="1" maxlength="1" readonly="true"></td>
+                  <td><input type="text" class="form-control" size="1" maxlength="1" readonly="true"></td>
+                  <td><input type="text" class="form-control" size="1" maxlength="1" readonly="true"></td>
+                  <td><input type="text" class="form-control" size="1" maxlength="1" readonly="true"></td>
+                  <td></td>
+                </tr>
+              </tbody>
+            </table>
+          </div>
+          <div class="col-xs-12"> 
+            <table class="table table-condensed">
+              <thead>
+                <tr>
+                  <th colspan="6">1C OO大學 XXX</th>
+                  <th>總分</th>
+                </tr>
+              </thead>
+              <tbody>
+                <tr>
+                  <td><input type="text" class="form-control" size="1" maxlength="1" readonly="true"></td>
+                  <td><input type="text" class="form-control" size="1" maxlength="1" readonly="true"></td>
+                  <td><input type="text" class="form-control" size="1" maxlength="1" readonly="true"></td>
+                  <td><input type="text" class="form-control" size="1" maxlength="1" readonly="true"></td>
+                  <td><input type="text" class="form-control" size="1" maxlength="1" readonly="true"></td>
+                  <td><input type="text" class="form-control" size="1" maxlength="1" readonly="true"></td>
+                  <td></td>
+                </tr>
+              </tbody>
+            </table>
+          </div>
+          <div class="col-xs-12"> 
+            <table class="table table-condensed">
+              <thead>
+                <tr>
+                  <th colspan="6">1D OO大學 XXX</th>
+                  <th>總分</th>
+                </tr>
+              </thead>
+              <tbody>
+                <tr>
+                  <td><input type="text" class="form-control" size="1" maxlength="1" readonly="true"></td>
+                  <td><input type="text" class="form-control" size="1" maxlength="1" readonly="true"></td>
+                  <td><input type="text" class="form-control" size="1" maxlength="1" readonly="true"></td>
+                  <td><input type="text" class="form-control" size="1" maxlength="1" readonly="true"></td>
+                  <td><input type="text" class="form-control" size="1" maxlength="1" readonly="true"></td>
+                  <td><input type="text" class="form-control" size="1" maxlength="1" readonly="true"></td>
+                  <td></td>
+                </tr>
+              </tbody>
+            </table>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-xs-12">
+            <table class="table" id="keypad">
+              <tbody>
+                <tr>
+                  <td><button type="button" class="btn btn-default btn-lg btn-block">X</button></td>
+                  <td><button type="button" class="btn btn-default btn-lg btn-block">8</button></td>
+                  <td><button type="button" class="btn btn-default btn-lg btn-block">5</button></td>
+                  <td><button type="button" class="btn btn-default btn-lg btn-block">2</button></td>
+                </tr>
+                <tr>
+                  <td><button type="button" class="btn btn-default btn-lg btn-block">10</button></td>
+                  <td><button type="button" class="btn btn-default btn-lg btn-block">7</button></td>
+                  <td><button type="button" class="btn btn-default btn-lg btn-block">4</button></td>
+                  <td><button type="button" class="btn btn-default btn-lg btn-block">1</button></td>
+                </tr>
+                <tr>
+                  <td><button type="button" class="btn btn-default btn-lg btn-block">9</button></td>
+                  <td><button type="button" class="btn btn-default btn-lg btn-block">6</button></td>
+                  <td><button type="button" class="btn btn-default btn-lg btn-block">3</button></td>
+                  <td><button type="button" class="btn btn-default btn-lg btn-block">M</button></td>
+                </tr>
+              </tbody>
+            </table>
           </div>
         </div>
       </div>
