--- a/index.html
+++ b/index.html
@@ -239,44 +239,44 @@
             <div class="col-xs-12">
               <div class="btn-group btn-group-justified" role="group">
                 <div class="btn-group" role="group">
-                  <button type="button" class="btn btn-default">X</button>
+                  <button type="button" class="btn btn-lg">X</button>
                 </div>
                 <div class="btn-group" role="group">
-                  <button type="button" class="btn btn-default">8</button>
+                  <button type="button" class="btn btn-lg">8</button>
                 </div>
                 <div class="btn-group" role="group">
-                  <button type="button" class="btn btn-default">5</button>
+                  <button type="button" class="btn btn-lg">5</button>
                 </div>
                 <div class="btn-group" role="group">
-                  <button type="button" class="btn btn-default">2</button>
-                </div>
-              </div>
-              <div class="btn-group btn-group-justified" role="group">
-                <div class="btn-group" role="group">
-                  <button type="button" class="btn btn-default">10</button>
-                </div>
-                <div class="btn-group" role="group">
-                  <button type="button" class="btn btn-default">7</button>
-                </div>
-                <div class="btn-group" role="group">
-                  <button type="button" class="btn btn-default">4</button>
-                </div>
-                <div class="btn-group" role="group">
-                  <button type="button" class="btn btn-default">1</button>
+                  <button type="button" class="btn btn-lg">2</button>
                 </div>
               </div>
               <div class="btn-group btn-group-justified" role="group">
                 <div class="btn-group" role="group">
-                  <button type="button" class="btn btn-default">9</button>
+                  <button type="button" class="btn btn-lg">10</button>
                 </div>
                 <div class="btn-group" role="group">
-                  <button type="button" class="btn btn-default">6</button>
+                  <button type="button" class="btn btn-lg">7</button>
                 </div>
                 <div class="btn-group" role="group">
-                  <button type="button" class="btn btn-default">3</button>
+                  <button type="button" class="btn btn-lg">4</button>
                 </div>
                 <div class="btn-group" role="group">
-                  <button type="button" class="btn btn-default">M</button>
+                  <button type="button" class="btn btn-lg">1</button>
+                </div>
+              </div>
+              <div class="btn-group btn-group-justified" role="group">
+                <div class="btn-group" role="group">
+                  <button type="button" class="btn btn-lg">9</button>
+                </div>
+                <div class="btn-group" role="group">
+                  <button type="button" class="btn btn-lg">6</button>
+                </div>
+                <div class="btn-group" role="group">
+                  <button type="button" class="btn btn-lg">3</button>
+                </div>
+                <div class="btn-group" role="group">
+                  <button type="button" class="btn btn-lg">M</button>
                 </div>
               </div>
             </div>
