Update scoreTable, select one row. Show total score. Add clear button.

--- a/index.html
+++ b/index.html
@@ -157,41 +157,32 @@
                   <button type="button" class="btn btn-lg">X</button>
                 </div>
                 <div class="btn-group" role="group">
-                  <button type="button" class="btn btn-lg">8</button>
+                  <button type="button" class="btn btn-lg">10</button>
                 </div>
                 <div class="btn-group" role="group">
-                  <button type="button" class="btn btn-lg">5</button>
-                </div>
-                <div class="btn-group" role="group">
-                  <button type="button" class="btn btn-lg">2</button>
+                  <button type="button" class="btn btn-lg">9</button>
                 </div>
               </div>
               <div class="btn-group btn-group-justified" role="group">
                 <div class="btn-group" role="group">
-                  <button type="button" class="btn btn-lg">10</button>
+                  <button type="button" class="btn btn-lg">8</button>
                 </div>
                 <div class="btn-group" role="group">
                   <button type="button" class="btn btn-lg">7</button>
                 </div>
                 <div class="btn-group" role="group">
-                  <button type="button" class="btn btn-lg">4</button>
-                </div>
-                <div class="btn-group" role="group">
-                  <button type="button" class="btn btn-lg">1</button>
+                  <button type="button" class="btn btn-lg">6</button>
                 </div>
               </div>
               <div class="btn-group btn-group-justified" role="group">
                 <div class="btn-group" role="group">
-                  <button type="button" class="btn btn-lg">9</button>
-                </div>
-                <div class="btn-group" role="group">
-                  <button type="button" class="btn btn-lg">6</button>
-                </div>
-                <div class="btn-group" role="group">
-                  <button type="button" class="btn btn-lg">3</button>
+                  <button type="button" class="btn btn-lg">5</button>
                 </div>
                 <div class="btn-group" role="group">
                   <button type="button" class="btn btn-lg">M</button>
+                </div>
+                <div class="btn-group" role="group">
+                  <button type="button" class="btn btn-lg">清除</button>
                 </div>
               </div>
             </div>
