--- a/index.html
+++ b/index.html
@@ -22,170 +22,11 @@
           </div>
           <br><br><br><br><br><br><br><br><br>
           <div class="col-xs-12">
-            <button type="button" class="btn btn-default btn-lg btn-block" id="btnStartScoring">競賽計分</button>
+            <a href="scoring.html" class="btn btn-default btn-lg btn-block" role="button">競賽計分</a>
           </div>
           <br><br><br><br><br><br><br>
           <div class="col-xs-12">
-            <button type="button" class="btn btn-primary btn-lg btn-block" id="btnLookUpResult">賽程/成績查詢</button>
-          </div>
-        </div>
-      </div>
-      <div id="verifyPage">
-        <br>
-        <div class="row">
-          <div class="col-xs-6 col-xs-offset-3 text-center">
-            <button type="button" class="btn btn-default btn-lg" id="btnBackToMainPage1"><i class="fa fa-arrow-left" aria-hidden="true"></i> 回上一頁</button>
-          </div>
-        </div>
-        <br>
-        <div class="row">
-          <div class="col-xs-8 text-center col-xs-offset-2">
-            <h1>競賽計分<br><small>請輸入靶位碼</small></h1>
-            <!--<div id="scoringDisabled">
-<div class="form-group">
-<label class="control-label"></label>
-<input type="text" class="form-control" disabled placeholder="比賽尚未開始">
-</div>
-<button type="submit" class="btn btn-default" disabled>送出</button>
-</div>-->
-            <div id="scoringEnabled">
-              <div class="form-group">
-                <label class="control-label" for="verifyCode">
-                  <!--<div id="inputError">輸入錯誤</div>-->
-                </label>
-                <input type="text" class="form-control" id="verifyCode">
-              </div>
-              <button type="submit" class="btn btn-default" id="btnSubmitCode">送出</button>
-            </div>
-          </div>
-        </div>
-      </div>
-      <div id="resultPage">
-        <br>
-        <div class="row">
-          <div class="col-xs-6 text-center">
-            <button type="button" class="btn btn-default btn-lg" id="btnBackToMainPage2"><i class="fa fa-arrow-left" aria-hidden="true"></i> 回上一頁</button>
-          </div>
-          <div class="col-xs-6 text-center">
-            <button type="button" class="btn btn-default btn-lg" id="refreshData"><i class="fa fa-refresh" aria-hidden="true"></i> 重新整理</button>
-          </div>
-        </div>
-        <br>
-        <div class="row">
-          <div class="col-xs-12">
-            <ul class="nav nav-tabs" id="contestTabs">
-              <li><a href="#qual" data-toggle="tab">資格賽</a></li>
-              <li><a href="#indMatch" data-toggle="tab">個人對抗賽</a></li>
-              <li><a href="#teamMatch" data-toggle="tab">團體對抗賽</a></li>
-            </ul>
-            <div class="tab-content">
-              <div id="qual" class="tab-pane">
-                <ul class="nav nav-tabs" id="qualTabs">
-                  <li><a href="#qualRookie" data-toggle="tab">新人組</a></li>
-                  <li><a href="#qualMenC" data-toggle="tab">男子丙組</a></li>
-                  <li><a href="#qualWomenC" data-toggle="tab">女子丙組</a></li>
-                  <li><a href="#qualB" data-toggle="tab">乙組</a></li>
-                </ul>
-              </div>
-              <div id="indMatch" class="tab-pane">
-                <ul class="nav nav-tabs" id="indMatchTabs">
-                  <li><a href="#indMatchRookie" data-toggle="tab">新人組</a></li>
-                  <li><a href="#indMatchMenC" data-toggle="tab">男子丙組</a></li>
-                  <li><a href="#indMatchWomenC" data-toggle="tab">女子丙組</a></li>
-                  <li><a href="#indMatchB" data-toggle="tab">乙組</a></li>
-                </ul>
-              </div>
-              <div id="teamMatch" class="tab-pane">
-                <ul class="nav nav-tabs" id="teamMatchTabs">
-                  <li><a href="#teamMatchRookie" data-toggle="tab">新人組</a></li>
-                  <li><a href="#teamMatchMenC" data-toggle="tab">男子丙組</a></li>
-                  <li><a href="#teamMatchWomenC" data-toggle="tab">女子丙組</a></li>
-                  <li><a href="#teamMatchB" data-toggle="tab">乙組</a></li>
-                </ul>
-              </div>
-            </div>
-            <div class="tab-content">
-              <div id="qualRookie" class="tab-pane">
-              </div>
-              <div id="qualMenC" class="tab-pane">
-              </div>
-              <div id="qualWomenC" class="tab-pane">
-              </div>
-              <div id="qualB" class="tab-pane">
-              </div>
-            </div>
-            <div class="tab-content">
-              <div id="indMatchRookie" class="tab-pane">
-              </div>
-              <div id="indMatchMenC" class="tab-pane">
-              </div>
-              <div id="indMatchWomenC" class="tab-pane">
-              </div>
-              <div id="indMatchB" class="tab-pane">
-              </div>
-            </div>
-            <div class="tab-content">
-              <div id="teamMatchRookie" class="tab-pane">
-              </div>
-              <div id="teamMatchMenC" class="tab-pane">
-              </div>
-              <div id="teamMatchWomenC" class="tab-pane">
-              </div>
-              <div id="teamMatchB" class="tab-pane">
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-      <div id="scoringPage">
-        <br>
-        <div class="row">
-          <div class="col-xs-12 text-center">
-            <button type="button" class="btn btn-default btn-lg" id="btnBackToMainPage3"><i class="fa fa-arrow-left" aria-hidden="true"></i> 回上一頁</button>
-          </div>
-        </div>
-        <br>
-        <div class="row">
-          <div id="scoreTable">
-          </div>
-        </div>
-        <div class="row">
-          <div id="keypad">
-            <div class="col-xs-12">
-              <div class="btn-group btn-group-justified" role="group">
-                <div class="btn-group" role="group">
-                  <button type="button" class="btn btn-lg">X</button>
-                </div>
-                <div class="btn-group" role="group">
-                  <button type="button" class="btn btn-lg">10</button>
-                </div>
-                <div class="btn-group" role="group">
-                  <button type="button" class="btn btn-lg">9</button>
-                </div>
-              </div>
-              <div class="btn-group btn-group-justified" role="group">
-                <div class="btn-group" role="group">
-                  <button type="button" class="btn btn-lg">8</button>
-                </div>
-                <div class="btn-group" role="group">
-                  <button type="button" class="btn btn-lg">7</button>
-                </div>
-                <div class="btn-group" role="group">
-                  <button type="button" class="btn btn-lg">6</button>
-                </div>
-              </div>
-              <div class="btn-group btn-group-justified" role="group">
-                <div class="btn-group" role="group">
-                  <button type="button" class="btn btn-lg">5</button>
-                </div>
-                <div class="btn-group" role="group">
-                  <button type="button" class="btn btn-lg">M</button>
-                </div>
-                <div class="btn-group" role="group">
-                  <button type="button" class="btn btn-lg">清除</button>
-                </div>
-              </div>
-            </div>
+            <a href="viewscore.html" class="btn btn-primary btn-lg btn-block" role="button">賽程/成績查詢</a>
           </div>
         </div>
       </div>
